# Limerence

./: CMakeLists.txt  README.md
src/: engine.cpp
src/core/: window.cpp
src/math/: raycast.cpp  raycast.h  transform.cpp  transform.h  vector2.cpp  vector2.h
src/render/: shader.cpp  shader.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  window.cpp  window.h
